discovery-deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2 
kind: Deployment 
metadata: 
  name: spring-discovery-deployment 
spec: 
  selector: 
    matchLabels: 
      app: spring-discovery 
  replicas: 2 # tells deployment to run 2 pods matching the template 
  template: 
    metadata: 
      labels: 
        app: spring-discovery 
    spec: 
      containers: 
      - name: spring-discovery 
        image: sougata26/spring-discover:1.0
        ports: 
        - containerPort: 8085
---
# https://kubernetes.io/docs/concepts/services-networking/service/#defining-a-service 
kind: Service 
apiVersion: v1 
metadata: 
  name: spring-discovery-service 
spec: 
  selector: 
    app: spring-discovery 
  ports: 
  - protocol: TCP 
    port: 8085
    targetPort: 8085
  type: LoadBalancer
