location-deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: location-deployment
  labels:
    app: location
spec:
  selector:
    matchLabels:
      app: location
  replicas: 3 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: location
    spec:
      containers:
      - name: location
        image: sougata26/spring-location:3.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8082
---
# https://kubernetes.io/docs/concepts/services-networking/service/#defining-a-service
apiVersion: v1
kind: Service
metadata:
  name: location-service
  labels:
    app: location
    service: location-service
  annotations:
    plugins.konghq.com: request-id, response-transformer, api-key-auth
spec:
  clusterIP: None
  selector:
    app: location
  ports:
  - port: 8082
    name: http
  #type: ClusterIP
