istio-ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: company
spec:
  hosts:
  - "*"
  gateways:
  - bookinfo-gateway
  http:
  - match:
    - uri:
        prefix: /company/1
    route:
    - destination:
        host: company-service
        port:
          number: 8081
      weight: 100
