kong-gateway.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo
spec:
  rules:
  - http:
      paths:
      - path: /foo
        backend:
          serviceName: echo
          servicePort: 80
      - path: /company
        backend:
          serviceName: company-service
          servicePort: 8081
      - path: /location
        backend:
          serviceName: location-service
          servicePort: 8082
      - path: /api/v1/stats
        backend:
          serviceName: stats-service
          servicePort: 3000
